[gd_scene load_steps=4 format=3 uid="uid://dfv4j45pnhv4q"]

[ext_resource type="Script" path="res://Scripts/Slider.gd" id="1_afbxj"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_wn0j0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyi30"]

[node name="Slider" type="Node2D"]
position = Vector2(848, 384)
script = ExtResource("1_afbxj")

[node name="Path" type="ColorRect" parent="."]
offset_left = -250.0
offset_top = -2.5
offset_right = -210.0
offset_bottom = 37.5
scale = Vector2(12.5, 0.125)
mouse_filter = 2

[node name="Slider" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
scale = Vector2(25, 25)
texture = SubResource("PlaceholderTexture2D_wn0j0")

[node name="Collision" type="Area2D" parent="Slider"]
scale = Vector2(0.05, 0.05)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slider/Collision"]
shape = SubResource("RectangleShape2D_kyi30")

[node name="maxValue" type="RichTextLabel" parent="."]
offset_left = -300.0
offset_top = -50.0
offset_right = -200.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]100"

[node name="minValue" type="RichTextLabel" parent="."]
offset_left = 200.0
offset_top = -50.0
offset_right = 300.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]0
"

[node name="Value" type="RichTextLabel" parent="."]
offset_left = -50.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 75.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]100"

[node name="Name" type="RichTextLabel" parent="."]
offset_left = -250.0
offset_top = -68.0
offset_right = 250.0
offset_bottom = -18.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center] Test"

[connection signal="mouse_entered" from="Slider/Collision" to="." method="_on_collision_mouse_entered"]
[connection signal="mouse_exited" from="Slider/Collision" to="." method="_on_collision_mouse_exited"]
